--- a/apps/smallapp/play/index.html
+++ b/apps/smallapp/play/index.html
@@ -1,13 +1,15 @@
 <script>
 (function(){
 var path=location.href
-var inputContent=path.split("?").split("&")
+var inputContent=path.split("?")
+if(inputContent.search("&")!==-1) inputContent=inputContent.split("&")
 var i=0
 for(;i<inputContent.length;i++){
 if(/appname=/.test(inputContent[i])){
 var appname=inputContent[i].replace("appname=","");
 break;
  }
+if(i==inputContent.length-1) var appname=undefined;
 }
 
 alert(appname)
