--- a/apps/smallapp/play/index.html
+++ b/apps/smallapp/play/index.html
@@ -1,7 +1,7 @@
 <script>
 (function(){
 var path=location.href
-var inputContent=path.split("?")
+var inputContent=path.split("?")[1]
 if(inputContent.search("&")!==-1) inputContent=inputContent.split("&")
 var i=0
 for(;i<inputContent.length;i++){
