--- a/apps/smallapp/play/index.html
+++ b/apps/smallapp/play/index.html
@@ -12,6 +12,10 @@ break;
 if(i==inputContent.length-1) var appname=undefined;
 }
 
-alert(appname)
+if(appname){
+
+ } else {
+document.write("<h1><center>404...</center></h1><p>您要访问的页面似乎出错了...</p>")
+ }
 })()
 </script>
