--- a/apps/smallapp/play/index.html
+++ b/apps/smallapp/play/index.html
@@ -15,7 +15,7 @@ if(i==inputContent.length-1) var appname=undefined;
 if(appname){
 
  } else {
-document.write("<h1><center>404...</center></h1><p>您要访问的页面似乎出错了...</p>")
+document.write("<center><h1>404</h1><p>您要访问的页面似乎出错了...</p></center>")
  }
 })()
 </script>
