--- a/apps/smallapp/play/index.html
+++ b/apps/smallapp/play/index.html
@@ -13,7 +13,7 @@ if(i==inputContent.length-1) var appname=undefined;
 }
 
 if(appname){
-
+document.write(appname)
  } else {
 document.write("<center><h1>404</h1><p>您要访问的页面似乎出错了...</p></center>")
  }
