--- a/apps/smallapp/play/index.html
+++ b/apps/smallapp/play/index.html
@@ -2,9 +2,9 @@
 (function(){try{
 appname=undefined
 var path=location.href
-if(path.search("?")!==-1){
+if(path.search("\\?")!==-1){
 var inputContent=path.split("?")[1]
-if(inputContent.search("&")!==-1) { 
+if(inputContent.search("\\&")!==-1) { 
 inputContent=inputContent.split("&") 
 var i=0
 for(;i<inputContent.length;i++){
