--- a/panduanmoban.html
+++ b/panduanmoban.html
@@ -6,7 +6,7 @@ if(path.search("\\?")!==-1){
 var inputContent=path.split("?")[1]
 if(inputContent.search("&")!==-1) { 
 inputContent=inputContent.split("&") 
-var i=0
+var i=0;/*/SUM=7/*/
 for(;i<inputContent.length;i++){
 if(/=/.test(inputContent[i])){
 =inputContent[i].replace("=","");
