--- a/documents/download-Welcome-to-WPS-Cloud-Documents.pdf/index.html
+++ b/documents/download-Welcome-to-WPS-Cloud-Documents.pdf/index.html
@@ -1,5 +1,6 @@
 <script src="https://shc7432.github.io/public/getLinkInput.js"></script>
 <script>
 findInput("pw",,"document.write('非常抱歉,本页面暂时无法打开。请检查以下项目。<br>1.项目链接失效。<br>2.项目内容违规。<br>3.项目被删除。<br>4.如果设置了密码,请检查密码是否正确。')")
-if(pw=='dage24s9'){location.href="Welcome-to-WPS-Cloud-Documents.pdf"} else {document.write("非常抱歉,本页面暂时无法打开。请检查以下项目。<br>1.项目链接失效。<br>2.项目内容违规。<br>3.项目被删除。<br>4.如果设置了密码,请检查密码是否正确。")}
+alert(pw)
+if(pw=='123456'){location.href="Welcome-to-WPS-Cloud-Documents.pdf"} else {document.write("非常抱歉,本页面暂时无法打开。请检查以下项目。<br>1.项目链接失效。<br>2.项目内容违规。<br>3.项目被删除。<br>4.如果设置了密码,请检查密码是否正确。")}
 </script>
