--- a/apps/smallapp/perfect-plan-for-4-days/0.html
+++ b/apps/smallapp/perfect-plan-for-4-days/0.html
@@ -1,1 +1,5 @@
-
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
+<title>4天瘦20斤完美计划</title>
+<script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
+<h1>温馨提示</h1>
+<form action="1.html" onsubmit="localStorage.perfectplanfor4days='1'">请使用同一个浏览器!!!!!!<br><input type=submit value=我知道了></form>
