--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -1,1 +1,5 @@
-
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
+<title>4天瘦20斤完美计划</title>
+<script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
+<h1>第一天</h1>
+<div>今天的任务是:不要吃饭<br><img src="noeat.jpg"></div>
