--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -30,6 +30,7 @@
 if(localStorage.perfectplanfor4daysday1){
 if(new Date()>localStorage.perfectplanfor4daysday1){
 jingdu.style.width="100%"
+time.innerHTML="<b>恭喜通关!</b>"
  } else {
 let n=new Date().getHours()
 debugger;
