--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -15,10 +15,10 @@
 .progress {
   animation: progress 1s;
 }
-@keyframes progress {
+/*@keyframes progress {
   from { width: 0%; }
   to { width: 100%; }
-}
+}*/
 </style>
 
 <div class="progress-wrap">
