--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -27,6 +27,7 @@
 
 </div>
 <script>
+alert(localStorage.perfectplanfor4daysday1)
 if(localStorage.perfectplanfor4daysday1){
 if(new Date()>localStorage.perfectplanfor4daysday1){
 jingdu.style.width="100%"
