--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -46,7 +46,7 @@ time.innerHTML=n3+"小时"
  }
 } else {
 let a=new Date.setDate(new Date().getDate()+1)
-
+alert(a)
 localStorage.perfectplanfor4daysday1=a
 
 location.reload()
