--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -2,7 +2,7 @@
 <title>4天瘦20斤完美计划</title>
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <h1>第一天</h1><input type=text hidden id=jumpthis onblur="if(this.value=='跳过关卡'){localStorage.perfectplanfor4daysday1=new Date();location.reload()} else this.value=''">
-<div><label for="jumpthis">今天的任务是:不要吃饭</label><br><img src="noeat.jpg" width="400" height="250">本次任务完成后，系统自动为您跳转到下个任务</div>
+<br><div><label for="jumpthis" onclick="jumpthis.focus()">今天的任务是:不要吃饭</label><br><img src="noeat.jpg" width="400" height="250">本次任务完成后，系统自动为您跳转到下个任务</div>
 <div>本次任务剩余时间:<span id=time></span>
 <style type="text/css">
 .progress-wrap {
@@ -27,7 +27,6 @@
 
 </div>
 <script>
-alert(localStorage.perfectplanfor4daysday1)
 if(localStorage.perfectplanfor4daysday1){
 if(new Date()>localStorage.perfectplanfor4daysday1){
 jingdu.style.width="100%"
@@ -46,7 +45,7 @@ time.innerHTML=n3+"小时"
  }
 } else {
 let a=new Date.setDate(new Date().getDate()+1)
-alert(a)
+
 localStorage.perfectplanfor4daysday1=a
 
 location.reload()
