--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -26,7 +26,7 @@
 </div>
 
 </div>
-<script>
+<script type="test/js">
 if(localStorage.perfectplanfor4daysday1){
 if(new Date()>localStorage.perfectplanfor4daysday1){
 jingdu.style.width="100%"
