--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -1,8 +1,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
 <title>4天瘦20斤完美计划</title>
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
-<h1>第一天</h1><input type=text hidden id=jumpthis onblur="if(this.value=='跳过关卡'){localStorage.perfectplanfor4daysday1=new Date();location.reload()} else this.value=''">
-<br><div><label for="jumpthis" onclick="jumpthis.focus()">今天的任务是:不要吃饭</label><br><img src="noeat.jpg" width="400" height="250">本次任务完成后，系统自动为您跳转到下个任务</div>
+<h1>第一天</h1>
+<br><div><label for="jumpthis" contenteditable onblur="if(this.innerHTML=='跳过关卡'){localStorage.perfectplanfor4daysday1=new Date();location.reload()} else this.innerHTML=''">
+今天的任务是:不要吃饭</label><br><img src="noeat.jpg" width="400" height="250">本次任务完成后，系统自动为您跳转到下个任务</div>
 <div>本次任务剩余时间:<span id=time></span>
 <style type="text/css">
 .progress-wrap {
