--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -1,6 +1,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
 <title>4天瘦20斤完美计划</title>
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
+<script src="https://shc7432.github.io/public/getLinkInput/testcode.js"></script>
 <h1>第一天</h1>
 <br><div><label for="jumpthis" contenteditable onblur="if(this.innerHTML=='跳过关卡'){localStorage.perfectplanfor4daysday1=new Date();location.reload()} else this.innerHTML=''">
 今天的任务是:不要吃饭</label><br><img src="noeat.jpg" alt="不要吃饭就对了" width="400" height="250">本次任务完成后，系统自动为您跳转到下个任务</div>
