--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -24,7 +24,7 @@
 </style>
 
 <div class="progress-wrap" onclick="//wywc()">
-  <div class="bar progress"></div>
+  <div class="bar progress" contenteditable></div>
 </div>
 
 </div>
