--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -3,7 +3,7 @@
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <script src="https://shc7432.github.io/public/getLinkInput/testcode.js"></script>
 <h1>第一天</h1>
-<br><div contentEditable="true">今天的任务是:不要吃饭<br><img src="data:image/png,ffffff" onclick="this.src='noeat.jpg'" alt="不要吃饭就对了" width="400" height="250">本次任务完成后，系统自动为您跳转到下个任务</div>
+<br><div>今天的任务是:不要吃饭<br><img src="data:image/png,ffffff" onclick="this.src='noeat.jpg'" alt="不要吃饭就对了" width="400" height="250"><div contentEditable="true">本次任务完成后，系统自动为您跳转到下个任务</div></div>
 <div>本次任务剩余时间:<span id=time>24小时</span>
 <style type="text/css">
 .progress-wrap {
@@ -70,6 +70,6 @@ setTimeout(checkend,61000)
 function checkEnd(){
 delete localStorage.perfectplanfor4daysday1
 localStorage.perfectplanfor4days="2"
-location.href="kndex.html"
+location.href="index.html"
 }
 </script>
