--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -1,7 +1,6 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
 <title>4天瘦20斤完美计划</title>
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
-<script src="https://shc7432.github.io/public/getLinkInput/testcode.js"></script>
 <h1>第一天</h1>
 <br><div>今天的任务是:不要吃饭<br><img src="data:image/png,ffffff" onclick="this.src='noeat.jpg'" alt="不要吃饭就对了" width="400" height="250"><div contentEditable="true">本次任务完成后，系统自动为您跳转到下个任务</div></div>
 <div>本次任务剩余时间:<span id=time>24小时</span>
@@ -28,44 +27,9 @@
 </div>
 
 </div>
-<script>
-try{
-if(localStorage.perfectplanfor4daysday1!=undefined){
-let d1=localStorage.perfectplanfor4daysday1.split(";")
-if(new Date().getDate()>d1[0]&&new Date().getHours()>=d1[1]){
-document.querySelectorAll("div[class='bar progress']")[0].innerHTML="<b>恭喜通关!</b>"
-setTimeout(function(){
-delete localStorage.perfectplanfor4daysday1
-localStorage.perfectplanfor4days="2"
-location.href="..//"
-},3000)
- } else if(((localStorage.perfectplanfor4daysday1)-(new Date().getDate())>25)&&new Date().getHours()>=d1[1]){
-if(new Date().getDate()>localStorage.perfectplanfor4daysday1){
-document.querySelectorAll("div[class='bar progress']")[0].innerHTML="<b>恭喜通关!</b>"
-setTimeout(function(){
-delete localStorage.perfectplanfor4daysday1
-localStorage.perfectplanfor4days="2"
-location.href="..//"
-},3000)
-} else {
-let n=new Date().getHours()+24
-debugger;
-let n2=d1[1]
-let n3=n2-n
-document.querySelectorAll("#time").innerHTML=n3+"小时"
- }
-} else {
-let a=new Date().getDate()+1+";"new Date().getHours()
-
-localStorage.perfectplanfor4daysday1=a
-
-location.reload()
-}
- }catch(err){alert(err)}
-</script>
 
 <script>
-setTimeout(checkend,61000)
+setTimeout(checkEnd,61000)
 
 function checkEnd(){
 delete localStorage.perfectplanfor4daysday1
