--- a/apps/smallapp/perfect-plan-for-4-days/2.html
+++ b/apps/smallapp/perfect-plan-for-4-days/2.html
@@ -3,7 +3,7 @@
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <h1>第二天</h1>
 <br><div>今天的任务是:俯卧撑10000个<br><img src="data:image/png,ffffff" onclick="" alt="做就是了" width="400" height="250"><br>请将手机带在身上做,我们会帮您计数<div contentEditable="true">本次任务完成后，系统自动为您跳转到下个任务</div></div>
-<div>本次任务剩余:<span id=time>10000</span>个
+<div>本次任务剩余: <span style="color:blue"><span id=time>10000</span>个</span>
 <style type="text/css">
 .progress-wrap {
   border: 1px solid #333;
