--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -39,14 +39,14 @@ location.href="index.html"
 
 (function(){
 
-var check=function(inp){
+check=function(inp){
 if(inp<10){
 return "0"+inp;
  } 
 return inp;
 }
 
-var tme=59;
+tme=59;
 
 setTimeout(runtime,1000)
 
