--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -52,7 +52,7 @@ setTimeout(runtime,1000)
 
 function runtime(){
 time.innerHTML="00"
-time2=check(tme);
+time2.innerHTML=check(tme);
 tme--;
 setTimeout(runtime,1000)
 }
