--- a/apps/smallapp/perfect-plan-for-4-days/2.html
+++ b/apps/smallapp/perfect-plan-for-4-days/2.html
@@ -42,7 +42,7 @@ tme=9999;
 setTimeout(runtime,5000)
 
 function runtime(){
-time=tme;
+time.innerHTML=tme;
 tme--;
 if(tme==-1) checkEnd();
 setTimeout(runtime,10)
