--- a/apps/smallapp/perfect-plan-for-4-days/end.html
+++ b/apps/smallapp/perfect-plan-for-4-days/end.html
@@ -7,7 +7,7 @@
 function cleardata(){
 var w=window.open("clear.html")
 w.close();
-open("mailto:18907436033@163.com?subject="+encodeURIComponent("感谢您,作者!感谢您让我减肥20斤!"),'_self')
+window.open("mailto:18907436033@163.com?subject="+encodeURIComponent("感谢您,作者!&body=感谢您,作者!感谢您让我减肥20斤!"),'_self')
 this.window.opener = null;   
 window.close();   
 return true;
