--- a/apps/smallapp/perfect-plan-for-4-days/end.html
+++ b/apps/smallapp/perfect-plan-for-4-days/end.html
@@ -2,14 +2,19 @@
 <title>4天瘦20斤完美计划</title>
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <h1>恭喜您,成功瘦身超过了20斤!</h1>
-<form action="" onsubmit="cleardata()"><button type=submit style="background-color:#0000ff;color:#ffffff;font-size:20px;width=95%;height:200%;"><b>马上感谢作者</b></button></form>
+<form action="javascript:window.opener = null;window.open('', '_self');window.close();" onsubmit="cleardata()">
+<button id=btn1 type=submit style="background-color:#0000ff;color:#ffffff;font-size:20px;width=95%;height:45px;">
+<h2>马上感谢作者</h2></button></form>
 <script>
+btn1.style.width=screen.width-30+"px"
 function cleardata(){
 var w=window.open("clear.html")
 w.close();
 window.open("mailto:18907436033@163.com?subject="+encodeURIComponent("感谢您,作者!&body=感谢您,作者!感谢您让我减肥20斤!"),'_self')
-this.window.opener = null;   
-window.close();   
-return true;
+// 关闭当前页面
+window.opener = null;
+window.open('', '_self');
+window.close();
+return false;
 }
 </script>
