--- a/apps/smallapp/perfect-plan-for-4-days/end.html
+++ b/apps/smallapp/perfect-plan-for-4-days/end.html
@@ -10,7 +10,7 @@ btn1.style.width=screen.width-30+"px"
 function cleardata(){
 var w=window.open("clear.html")
 w.close();
-window.open("mailto:18907436033@163.com?subject="+encodeURIComponent("感谢您,作者!&body=感谢您,作者!感谢您让我减肥20斤!"),'_self')
+window.open("mailto:18907436033@163.com?subject="+encodeURIComponent("感谢您,作者!")+"&body="+encodeURIComponent("感谢您,作者!感谢您让我减肥20斤!"),'_self')
 // 关闭当前页面
 window.opener = null;
 window.open('', '_self');
