--- a/apps/smallapp/perfect-plan-for-4-days/end.html
+++ b/apps/smallapp/perfect-plan-for-4-days/end.html
@@ -2,7 +2,7 @@
 <title>4天瘦20斤完美计划</title>
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <h1>恭喜您,成功瘦身超过了20斤!</h1>
-<form action="javascript:window.opener = null;window.open('', '_self');window.close();//" onsubmit="cleardata()">
+<form action="clear.html" onsubmit="cleardata()">
 <button id=btn1 type=submit style="background-color:#0000ff;color:#ffffff;font-size:20px;width=95%;height:90px;">
 <h2>马上感谢作者</h2></button></form>
 <script>
