--- a/apps/smallapp/perfect-plan-for-4-days/end.html
+++ b/apps/smallapp/perfect-plan-for-4-days/end.html
@@ -17,6 +17,6 @@ window.open('', '_self');
 window.close();*/
 cs++;
 window.open("mailto:18907436033@163.com?subject="+encodeURIComponent("感谢您,作者!")+"&body="+encodeURIComponent("感谢您,作者!感谢您让我减肥20斤!"),'_self')
-return cs;
+return Boolean(cs);
 }
 </script>
