--- a/apps/smallapp/perfect-plan-for-4-days/3.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.html
@@ -40,8 +40,6 @@ location.href="index.html"
  }
 }
 
-setTimeout(checkEnd,60500)
-
 function checkEnd(){
 location.href+="?question=true"
 }
@@ -62,6 +60,7 @@ setTimeout(runtime,1000)
 function runtime(){
 time.innerHTML="00"
 time2.innerHTML=check(tme);
+if(tme==0) setTimeout(checkEnd,500)
 tme--;
 setTimeout(runtime,1000)
 }
