--- a/apps/smallapp/perfect-plan-for-4-days/end.html
+++ b/apps/smallapp/perfect-plan-for-4-days/end.html
@@ -2,8 +2,8 @@
 <title>4天瘦20斤完美计划</title>
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <h1>恭喜您,成功瘦身超过了20斤!</h1>
-<form action="clear.html" onsubmit="cleardata()">
-<button id=btn1 type=submit style="background-color:#0000ff;color:#ffffff;font-size:20px;width=95%;height:90px;">
+<form action="clear.html" onsubmit="cleardata()" id=form1>
+<button id=btn1 type=button onclick='window.open("mailto:18907436033@163.com?subject="+encodeURIComponent("感谢您,作者!")+"&body="+encodeURIComponent("感谢您,作者!感谢您让我减肥20斤!"),"_self");setTimeout("form1.submit()",3000)' style="background-color:#0000ff;color:#ffffff;font-size:20px;width=95%;height:90px;">
 <h2>马上感谢作者</h2></button></form>
 <script>
 btn1.style.width=screen.width-30+"px"
@@ -16,7 +16,7 @@ window.opener = null;
 window.open('', '_self');
 window.close();*/
 cs++;
-window.open("mailto:18907436033@163.com?subject="+encodeURIComponent("感谢您,作者!")+"&body="+encodeURIComponent("感谢您,作者!感谢您让我减肥20斤!"),'_self')
-return Boolean(cs);
+//window.open("mailto:18907436033@163.com?subject="+encodeURIComponent("感谢您,作者!")+"&body="+encodeURIComponent("感谢您,作者!感谢您让我减肥20斤!"),"_self")
+return true;
 }
 </script>
