--- a/apps/smallapp/perfect-plan-for-4-days/3.1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.1.html
@@ -1,1 +1,24 @@
-
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
+<title>4天瘦20斤完美计划</title>
+<script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
+<style>
+.InBox{
+font-size:16px;
+width:60px;
+height:30px;
+border:1px solid #ccc;
+}
+</style>
+<h1>体重调查</h1>
+<pre><form action="">使用本软件前体重:
+<input class="InBox" required placeholder="200" name=before type=number>KG
+使用本软件后体重:
+<input class="InBox" required placeholder="100" name=after type=number>KG
+<input type=submit value="提交"></form></pre>
+<script>
+if(getUrlValue("before")&&getUrlValue("after"){
+document.body.innerHTML="请稍候..."
+localStorage.perfectplanfor4days="4"
+localStorage.perfectplanfor4days4day=(Number(before)-Number(after))*2
+}
+</script>
