--- a/apps/smallapp/perfect-plan-for-4-days/4.html
+++ b/apps/smallapp/perfect-plan-for-4-days/4.html
@@ -1,1 +1,32 @@
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
+<title>4天瘦20斤完美计划</title>
+<script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
+<h1>第四天</h1>
+<br><div>今天的任务是:拉<span id="jjs"></span>斤屎</div>
+<form action="end.html" onsubmit="return true;" id=form1>
+<button id=btn1 type=submit style="background-color:#0000ff;color:#ffffff;font-size:20px;width=95%;height:90px;">
+<h2>马上感谢作者</h2></button></form>
+<style type="text/css">
+.progress-wrap {
+  border: 1px solid #333;
+}
+.bar {
+  background: #60c0e0;
+  height: 30px;
+  text-align:center;
+}
+.progress {
+  animation: progress 60s;
+}
+@keyframes progress {
+  from { width: 0%; }
+  to { width: 100%; }
+}
+</style>
 
+<div class="progress-wrap" onclick="//wywc()">
+  <div class="bar progress"></div>
+</div>
+<script>
+jjs.innerHTML=localStorage.perfectplanfor4days4day
+</script>
