--- a/apps/smallapp/perfect-plan-for-4-days/3.1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.1.html
@@ -19,6 +19,6 @@ border:1px solid #ccc;
 if(getUrlValue("before")&&getUrlValue("after"){
 document.body.innerHTML="请稍候..."
 localStorage.perfectplanfor4days="4"
-localStorage.perfectplanfor4days4day=(Number(before)-Number(after))*2
+localStorage.perfectplanfor4days4day=20-((Number(before)-Number(after))*2)
 }
 </script>
