--- a/apps/smallapp/perfect-plan-for-4-days/3.1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.1.html
@@ -10,16 +10,9 @@ border:1px solid #ccc;
 }
 </style>
 <h1>体重调查</h1>
-<pre><form action="">使用本软件前体重:
+<pre><form action="3.2.html">使用本软件前体重:
 <input class="InBox" required placeholder="200" name=before type=number>KG
 使用本软件后体重:
 <input class="InBox" required placeholder="100" name=after type=number>KG
 <input type=submit value="提交"></form></pre>
-<script>
-if(getUrlValue("before")&&getUrlValue("after"){
-document.body.innerHTML="请稍候..."
-localStorage.perfectplanfor4days="4"
-localStorage.perfectplanfor4days4day=20-((Number(before)-Number(after))*2)
-location.href="index.html"
-}
-</script>
+
