--- a/apps/smallapp/perfect-plan-for-4-days/3.2.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.2.html
@@ -1,7 +1,9 @@
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <script>
-document.body.innerHTML="请稍候..."
+onload=function(){
+document.documentElement.innerHTML="请稍候..."
 localStorage.perfectplanfor4days="4"
 localStorage.perfectplanfor4days4day=20-((Number(getUrlValue("before"))-Number(getUrlValue("after")))*2)
 location.href="index.html"
+}
 </script>
