--- a/apps/smallapp/perfect-plan-for-4-days/3.1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.1.html
@@ -7,12 +7,24 @@ font-size:16px;
 width:60px;
 height:30px;
 border:1px solid #ccc;
+color:#ccc;
+background-color:#fff;
 }
 </style>
 <h1>体重调查</h1>
-<pre><form action="3.2.html">使用本软件前体重:
-<input class="InBox" required placeholder="200" name=before type=number>KG
+<pre><form action="3.1" method="GET">使用本软件前体重:
+<input class="InBox" required step=0.1 placeholder="200" name=before type=number>KG
 使用本软件后体重:
-<input class="InBox" required placeholder="100" name=after type=number>KG
+<input class="InBox" required step=0.1 placeholder="100" name=after type=number>KG
 <input type=submit value="提交"></form></pre>
 
+<script>
+(function(){
+if(getUrlValue("before")&&getUrlValue("after")){
+document.documentElement.innerHTML="请稍候..."
+localStorage.perfectplanfor4days="4"
+localStorage.perfectplanfor4days4day=(10-(((Number(getUrlValue("before"))*10)-(Number(getUrlValue("after"))*10))/100))*2
+location.href="index.html"
+}
+})()
+</script>
