--- a/apps/smallapp/perfect-plan-for-4-days/index.html
+++ b/apps/smallapp/perfect-plan-for-4-days/index.html
@@ -1,3 +1,3 @@
 <script>
 if(localStorage.perfectplanfor4days==null||localStorage.perfectplanfor4days==undefined) {location.href="start.html"} else
-if(localStorage.perfectplanfor4days){location.href=localStorage.perfectplanfor4days+".html"} else document.write("抱歉,出现了一点小问题...(请清除缓存)")</script>
+if(localStorage.perfectplanfor4days){location.href=localStorage.perfectplanfor4days} else document.write("抱歉,出现了一点小问题...(请清除缓存)")</script>
