--- a/apps/smallapp/perfect-plan-for-4-days/3.1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.1.html
@@ -27,7 +27,7 @@ var before,after,ab
 ab=1
 before=parseFloat(getUrlValue("before"))*10
 after=parseFloat(getUrlValue("after"))*10
-localStorage.perfectplanfor4days4day=((10-(before-after)))*2/10
+localStorage.perfectplanfor4days4day=((10*10-(before-after)))*2/10
 location.href="index"
 } else {
 bef.placeholder="200"
