--- a/apps/smallapp/perfect-plan-for-4-days/0.html
+++ b/apps/smallapp/perfect-plan-for-4-days/0.html
@@ -2,4 +2,4 @@
 <title>4天瘦20斤完美计划</title>
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <h1>温馨提示</h1>
-<form action="1.html" onsubmit="localStorage.perfectplanfor4days='1'">请使用同一个浏览器!!!!!!<br><input type=submit value=我知道了></form>
+<form action="1" onsubmit="localStorage.perfectplanfor4days='1'">1.请使用同一个浏览器!!!!!!<p>2.此软件只适合意志坚强有耐心为了目标肯吃苦不轻言放弃的人,如果你不是这样的人建议你还是不要用了。</p><p><input type=submit value=我知道了></p></form>
