--- a/apps/smallapp/perfect-plan-for-4-days/0.html
+++ b/apps/smallapp/perfect-plan-for-4-days/0.html
@@ -5,6 +5,6 @@
 <form action="1" onsubmit="localStorage.perfectplanfor4days='1'">
 <pre>1.请使用同一个浏览器!!!
 2.<span style="color:red">此软件只适合意志坚强有耐心为了目标肯吃苦不轻言放弃的人,如果你不是这样的人建议你还是不要用了。</span>
-3.如果您不是直接通过index.html启动,请使用这个链接:<a href="##">https://shc7432.github.io/download/apps/smallapp/perfect-plan-for-4-days</a>
+3.如果您不是直接通过index.html启动,请使用这个链接:<script>if(screen.width<800) document.write("\n")</script><a href="##">https://shc7432.github.io/download/apps/smallapp/perfect-plan-for-4-days</a>
 4.请不要作弊!!!
 5.如果对此方案不满意,那就别用了,谁让你自己点进来的?!</pre><p><button type=button onclick="window.opener=null;window.open('','_self');window.close();">算了,我意志薄弱</button><button type=submit>我要试试!</button></p></form>
