--- a/apps/smallapp/perfect-plan-for-4-days/0.html
+++ b/apps/smallapp/perfect-plan-for-4-days/0.html
@@ -5,7 +5,7 @@
 <form action="1" onsubmit="localStorage.perfectplanfor4days='1'">
 <code class="wxtsctet">1.请使用同一个浏览器!!!<br>
 2.<span style="color:red">此软件只适合意志坚强有耐心为了目标肯吃苦不轻言放弃的人,如果你不是这样的人建议你还是不要用了。</span><br>
-3.如果您不是直接通过index.html启动,请使用这个链接:<a href="##">https://shc7432.github.io/download/apps/smallapp/perfect-plan-for-4-days</a><br>
+3.如果您不是直接通过index.html启动,请使用这个链接:<a href="index.html">https://shc7432.github.io/download/apps/smallapp/perfect-plan-for-4-days</a><br>
 4.请不要作弊!!!<br>
 5.如果对此方案不满意,那就别用了,谁让你自己点进来的?!<br>
 <script>document.querySelectorAll("[class='wxtsctet']")[0].innerHTML=document.querySelectorAll("[class='wxtsctet']")[0].innerHTML.replace(/\u005c\u006e/,"<br>")</script>
