--- a/apps/smallapp/perfect-plan-for-4-days/0.html
+++ b/apps/smallapp/perfect-plan-for-4-days/0.html
@@ -8,5 +8,5 @@
 3.如果您不是直接通过index.html启动,请使用这个链接:<a href="index.html">https://shc7432.github.io/download/apps/smallapp/perfect-plan-for-4-days</a><br>
 4.请不要作弊!!!<br>
 5.如果对此方案不满意,那就别用了,谁让你自己点进来的?!<br>
-<script>document.querySelectorAll("[class='wxtsctet']")[0].innerHTML=document.querySelectorAll("[class='wxtsctet']")[0].innerHTML.replace(/\u005c\u006e/,"<br>")</script>
-</code><p><button type=button onclick="window.opener=null;window.open('','_self');window.close();">算了,我意志薄弱</button><button type=submit>我要试试!</button></p></form>
+</code><p><button type=button onclick="closewin()//window.opener=null;window.open('','_self');window.close();">算了,我意志薄弱</button><button type=submit>我要试试!</button></p></form>
+<script>function closewin(){window.opener=null;window.open('','_self');window.close()}</script>
