--- a/apps/smallapp/perfect-plan-for-4-days/index.html
+++ b/apps/smallapp/perfect-plan-for-4-days/index.html
@@ -1,3 +1,24 @@
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
+<title>4天瘦20斤完美计划</title>
+<script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <script>
+(function(){
+if(!localStorage.perfectplanfor4daysday){
 if(localStorage.perfectplanfor4days==null||localStorage.perfectplanfor4days==undefined) {location.href="start.html"} else
-if(localStorage.perfectplanfor4days){location.href=localStorage.perfectplanfor4days} else document.write("抱歉,出现了一点小问题...(请清除缓存)")</script>
+if(localStorage.perfectplanfor4days){location.href=localStorage.perfectplanfor4days} else document.write("抱歉,出现了一点小问题...<a href="0.html">重新开始</a>")
+} else {
+var rd=new Date(localStorage.perfectplanfor4daysday)
+var nd=new Date()
+if(nd>rd){
+if(localStorage.perfectplanfor4days==null||localStorage.perfectplanfor4days==undefined) {location.href="start.html"} else
+if(localStorage.perfectplanfor4days){location.href=localStorage.perfectplanfor4days} else document.write("抱歉,出现了一点小问题...<a href="0.html">重新开始</a>")
+ } else {
+var xch=rd.getHours()-nd.getHours()
+var xcm=rd.getMinutes()-nd.getMinutes()
+var xc=xch+"时"+xcm+"分"
+document.write("<h1>恭喜,您的今日目标已经达到!</h1>")
+document.write("<p>请"+xc+"后再试</p>")
+ }
+}
+})()
+</script>
