--- a/apps/smallapp/perfect-plan-for-4-days/2.html
+++ b/apps/smallapp/perfect-plan-for-4-days/2.html
@@ -32,6 +32,8 @@
 
 function checkEnd(){
 localStorage.perfectplanfor4days="3"
+var d=(new Date().setDate(new Date().getDate()+1))
+localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+d.getMonth()+"-"+d.getDate()+"T"+d.getHours()+":"+d.getMinutes().+":"+d.getSeconds()
 location.href="index.html"
 }
 
