--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -34,7 +34,7 @@ try{
 delete localStorage.perfectplanfor4daysday1
 localStorage.perfectplanfor4days="2"
 var d=new Date()
-d=d.setDate(d.getDate() + 1)
+d.setDate(d.getDate() + 1)
 localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+d.getMonth()+"-"+d.getDate()+"T"+d.getHours()+":"+d.getMinutes()+":"+d.getSeconds()
 location.href="index.html"
 }catch(err){alert(err)}
