--- a/apps/smallapp/perfect-plan-for-4-days/3.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.html
@@ -36,7 +36,8 @@ alert("恭喜!您成功瘦身超过了20斤,训练目标已经达到!")
 location.href="end.html"
  } else {
 localStorage.perfectplanfor4days="3.1"
-var d=(new Date().setDate(new Date().getDate()+1))
+var d=new Date()
+d.setDate(d.getDate() + 1)
 localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+d.getMonth()+"-"+d.getDate()+"T"+d.getHours()+":"+d.getMinutes()+":"+d.getSeconds()
 location.href="index.html"
  }
