--- a/apps/smallapp/perfect-plan-for-4-days/1.html
+++ b/apps/smallapp/perfect-plan-for-4-days/1.html
@@ -34,8 +34,13 @@ try{
 delete localStorage.perfectplanfor4daysday1
 localStorage.perfectplanfor4days="2"
 var d=new Date()
+function checkHad0(inp){
+if(inp<10||String(inp).length<2) return "0"+inp;
+return inp;
+}
 d.setDate(d.getDate() + 1)
-localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+d.getMonth()+"-"+d.getDate()+"T"+d.getHours()+":"+d.getMinutes()+":"+d.getSeconds()
+localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+checkHad0(d.getMonth())+"-"+checkHad0(d.getDate())+
+"T"+checkHad0(d.getHours())+":"+checkHad0(d.getMinutes())+":"+checkHad0(d.getSeconds())+"+08:00"
 location.href="index.html"
 }catch(err){alert(err)}
 }
