--- a/apps/smallapp/perfect-plan-for-4-days/3.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.html
@@ -36,9 +36,15 @@ alert("恭喜!您成功瘦身超过了20斤,训练目标已经达到!")
 location.href="end.html"
  } else {
 localStorage.perfectplanfor4days="3.1"
+
 var d=new Date()
+function checkHad0(inp){
+if(inp<10||String(inp).length<2) return "0"+inp;
+return inp;
+}
 d.setDate(d.getDate() + 1)
-localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+d.getMonth()+"-"+d.getDate()+"T"+d.getHours()+":"+d.getMinutes()+":"+d.getSeconds()
+localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+checkHad0(d.getMonth())+"-"+checkHad0(d.getDate())+
+"T"+checkHad0(d.getHours())+":"+checkHad0(d.getMinutes())+":"+checkHad0(d.getSeconds())+"+08:00"
 location.href="index.html"
  }
 }
