--- a/apps/smallapp/perfect-plan-for-4-days/2.html
+++ b/apps/smallapp/perfect-plan-for-4-days/2.html
@@ -33,8 +33,13 @@
 function checkEnd(){
 localStorage.perfectplanfor4days="3"
 var d=new Date()
+function checkHad0(inp){
+if(inp<10||String(inp).length<2) return "0"+inp;
+return inp;
+}
 d.setDate(d.getDate() + 1)
-localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+d.getMonth()+"-"+d.getDate()+"T"+d.getHours()+":"+d.getMinutes()+":"+d.getSeconds()
+localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+checkHad0(d.getMonth())+"-"+checkHad0(d.getDate())+
+"T"+checkHad0(d.getHours())+":"+checkHad0(d.getMinutes())+":"+checkHad0(d.getSeconds())+"+08:00"
 location.href="index.html"
 }
 
