--- a/apps/smallapp/perfect-plan-for-4-days/index.html
+++ b/apps/smallapp/perfect-plan-for-4-days/index.html
@@ -15,7 +15,7 @@ if(localStorage.perfectplanfor4days){location.href=localStorage.perfectplanfor4d
  } else {
 var xch=rd.getHours()-nd.getHours()
 var xcm=rd.getMinutes()-nd.getMinutes()
-alert(localStorage.perfectplanfor4daysday+"\n"+rd+"\n"+nd)
+//alert(localStorage.perfectplanfor4daysday+"\n"+rd+"\n"+nd)
 var xc=xch+"时"+xcm+"分"
 document.write("<h1>恭喜,您的今日目标已经达到!</h1>")
 document.write("<p>请"+xc+"后再试</p>")
