--- a/apps/smallapp/perfect-plan-for-4-days/3.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.html
@@ -44,7 +44,7 @@ return inp;
 }
 d.setDate(d.getDate() + 1)
 localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+checkHad0(d.getMonth())+"-"+checkHad0(d.getDate())+
-"T"+checkHad0(d.getHours())+":"+checkHad0(d.getMinutes())+":"+checkHad0(d.getSeconds())+"+08:00"
+"T"+checkHad0(d.getHours())+":"+checkHad0(d.getMinutes())+":"+checkHad0(d.getSeconds())
 location.href="index.html"
  }
 }
