--- a/apps/smallapp/perfect-plan-for-4-days/index.html
+++ b/apps/smallapp/perfect-plan-for-4-days/index.html
@@ -3,12 +3,13 @@
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <script>
 (function(){
+var rd=new Date(localStorage.perfectplanfor4daysday)
+var nd=new Date()
+alert(localStorage.perfectplanfor4daysday+"\n"+rd+"\n"+nd)
 if(localStorage.perfectplanfor4daysday==undefined){
 if(localStorage.perfectplanfor4days==null||localStorage.perfectplanfor4days==undefined) {location.href="start.html"} else
 if(localStorage.perfectplanfor4days){location.href=localStorage.perfectplanfor4days} else document.write("抱歉,出现了一点小问题...<a href='0.html'>重新开始</a>")
 } else {
-var rd=new Date(localStorage.perfectplanfor4daysday)
-var nd=new Date()
 if(nd>rd){
 if(localStorage.perfectplanfor4days==null||localStorage.perfectplanfor4days==undefined) {location.href="start.html"} else
 if(localStorage.perfectplanfor4days){location.href=localStorage.perfectplanfor4days} else document.write("抱歉,出现了一点小问题...<a href='0.html'>重新开始</a>")
