--- a/apps/smallapp/perfect-plan-for-4-days/index.html
+++ b/apps/smallapp/perfect-plan-for-4-days/index.html
@@ -22,8 +22,10 @@ var xcm=rd.getMinutes()+60-nd.getMinutes()
 //alert(localStorage.perfectplanfor4daysday+"\n"+rd+"\n"+nd)
 var xc=xch+"时"+xcm+"分"
 if(xc=="23时60分") xc="1天"
-document.write("<h1>您的今日目标已经达到</h1>")
-document.write("<p>请"+xc+"后再试 <button onclick='location.reload(1)'>重试</button></p>")
+document.write("<h1 style='text-align:center;'>403:访问被拒绝</h1>")
+document.write("<h3>您没有足够的权限访问此页面。</h3>")
+document.write("<h4><button onclick='location.reload(1)'>重试</button></h4>")
+document.write("<p>服务器消息:['请"+xc+"后再试']</p>")
  }
 }
 })()
