--- a/apps/smallapp/perfect-plan-for-4-days/nowxopen.html
+++ b/apps/smallapp/perfect-plan-for-4-days/nowxopen.html
@@ -6,6 +6,6 @@
       if (ua.match(/MicroMessenger/i) == "micromessenger") {
         document.write("<h1>请在浏览器中打开链接</h1>");
       } else {
-        location.href="..//";
+        location.href="index";
       }
 </script>
